p2/minikube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/p2-default: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: SWAGGER_JSON
              value: /aos/openapi.yaml
          image: svntyfour/frontaosgrupo10:v2
          name: clientesui
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
