p2/minikube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "4010"
      port: 4010
      targetPort: 4010
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
